[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes/gui/hbox_device/hbox_device.gd" type="Script" id=1]

[node name="hbox_device" type="HBoxContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
grow_horizontal = 0
script = ExtResource( 1 )

[node name="labels" type="VBoxContainer" parent="."]
margin_right = 60.0
margin_bottom = 104.0

[node name="hostname" type="Label" parent="labels"]
margin_right = 60.0
margin_bottom = 20.0
text = "host: "

[node name="poweroff" type="Button" parent="labels"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 50.0
hint_tooltip = "poweroff device"
text = "off"

[node name="port" type="Label" parent="labels"]
margin_top = 54.0
margin_right = 60.0
margin_bottom = 74.0
text = "port:"

[node name="down" type="Button" parent="labels"]
margin_top = 78.0
margin_right = 60.0
margin_bottom = 104.0
hint_tooltip = "disable port"
text = "down"

[node name="values" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 104.0

[node name="hostname" type="Label" parent="values"]
margin_right = 32.0
margin_bottom = 20.0
text = "   "

[node name="remove" type="Button" parent="values"]
margin_top = 24.0
margin_right = 32.0
margin_bottom = 50.0
hint_tooltip = "remove device"
text = "rm"

[node name="port" type="Label" parent="values"]
margin_top = 54.0
margin_right = 32.0
margin_bottom = 74.0

[node name="disconnect" type="Button" parent="values"]
margin_top = 78.0
margin_right = 32.0
margin_bottom = 104.0
hint_tooltip = "disconnect port"
text = "dc"
[connection signal="pressed" from="labels/poweroff" to="." method="_on_poweroff_pressed"]
[connection signal="pressed" from="labels/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="values/remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="values/disconnect" to="." method="_on_disconnect_pressed"]
